methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:2: error: not found: value vuBiscuit
  while(vuBiscuit()){
        ^MethodsReturning:5: error: not found: value vuBiscuit
       vuBiscuit() = vrai
       ^MethodsReturning:5: error: not found: value vrai
       vuBiscuit() = vrai
                     ^MethodsReturning:2: error: type mismatch;
 found   : Unit
 required: Boolean
  while(vuBiscuit()){
  ^